# Federated_learning_tournament

./: .gitignore  Untitled90.ipynb  final_robust_model_py.py  fllld.ipynb  project_overview_excluded.md
FL_backend/: FL_backend.slnx  docker-compose.override.yml  docker-compose.yml  launchSettings.json
FL_backend/FL_backend/: Dockerfile  Dockerfile.original  FL_backend.csproj  FL_backend.http  Program.cs  appsettings.json
FL_backend/FL_backend/Controllers/: FlController.cs
FL_backend/FL_backend/Data/: FLContext.cs
FL_backend/FL_backend/Data/Migrations/: 20260621195515_InitialFlSchema.cs  (+2 more)
FL_backend/FL_backend/Hubs/: FlHub.cs
FL_backend/FL_backend/Models/: FlClientResult.cs  FlDto.cs  FlLocalBaseline.cs  FlRound.cs
FL_backend/FL_backend/Properties/: launchSettings.json
FL_frontend/: package.json  pnpm-lock.yaml
FL_frontend/app/: globals.css  layout.tsx  page.tsx
FL_frontend/app/fault-detection/: page.tsx
FL_frontend/app/local-vs-global/: page.tsx
FL_frontend/components/: connection-badge.tsx  latest-round-table.tsx  sidebar-nav.tsx  well-card.tsx
FL_frontend/components/charts/: chart-utils.ts  local-global-chart.tsx  rounds-accuracy-chart.tsx  rounds-f1-chart.tsx
FL_frontend/hooks/: use-fl-socket.ts
FL_frontend/lib/: fl-constants.ts
Federated/: fl0.py  neural_network.ipynb  pyproject.toml
Federated/pytorchexample/: client_app.py  config.py  server_app.py  task.py
Federated/src/: server_app.py
fll/: app.js  comparison.html  detection.html  index.html  monitoring.html  style.css
quickstart-pytorch/pytorchexample/: client_app.py  task.py
