[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhsv-fl"
version = "1.0.0"
description = "DHSV Fault Detection — iTransformer + Flower Federated Learning"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dhsv"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
local-epochs = 5
